# caffa-data-model

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cafAppEnum.h  cafChildArrayField.h  cafChildArrayField.inl  cafChildArrayFieldAccessor.cpp  cafChildArrayFieldHandle.h  cafChildField.h  cafChildField.inl  cafChildFieldAccessor.h  cafChildFieldHandle.cpp  cafChildFieldHandle.h  cafDataField.h  cafDataFieldAccessor.h  cafDefaultObjectFactory.cpp  cafDefaultObjectFactory.h  cafField.h  cafFieldCapability.h  cafFieldHandle.cpp  cafFieldHandle.h  cafFieldHelper.h  cafFieldProxyAccessor.h  cafFieldValidator.h  cafMethodHandle.h  cafObjectCollector.h  cafObjectFactory.h  cafObjectFinder.h  cafObjectHandle.cpp  cafObjectHandle.h  cafObjectHandlePortableDataType.h  cafObjectMacros.h  cafObjectPerformer.h  cafPortableDataType.h  cafValueProxy.h  cafVisitor.cpp  cafVisitor.h  vcpkg.json
.github/workflows/: CaffaDataModelUnitTests.yml
DataModel_UnitTests/: CMakeLists.txt  Child.h  Parent.cpp  Parent.h  cafChildArrayFieldHandleTest.cpp  cafDataModelBasicTest.cpp
builds/ninja-multi/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cmake_install.cmake
builds/ninja-multi/Base/: CTestTestfile.cmake  cmake_install.cmake
builds/ninja-multi/Base/Base_UnitTests/: cmake_install.cmake
builds/ninja-multi/DataModel_UnitTests/: cmake_install.cmake
builds/ninja-multi/lib/Debug/: libcaffaBase.so.1  libcaffaDataModel.so.1  libcaffaDataModel.so.1.0.0
cmake/: git_submodule.cmake
